# skill-learner

./: .gitignore  LICENSE  README.html  README.md  pyproject.toml
docs/superpowers/plans/: 2026-04-20-skill-learner.md
docs/superpowers/specs/: 2026-04-20-skill-learner-design.md
examples/: anthropic_agent.py  custom_agent.py  openai_agent.py
src/skill_learner/: __init__.py  __main__.py  cli.py  config.py  engine.py  injector.py  loop.py  prompts.py  protocols.py  reviewer.py  semantic.py  skill.py  trigger.py
src/skill_learner/integrations/: __init__.py  claude_code.py  cursor.py  generic_agent.py
src/skill_learner/storage/: __init__.py  filesystem.py  sqlite.py
tests/: conftest.py  helpers.py  test_engine.py  test_injector.py  test_loop.py  test_reviewer.py  test_semantic.py  test_skill.py  test_storage_fs.py  test_storage_sqlite.py  test_trigger.py
