[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skill-learner"
version = "0.1.0"
description = "Self-accumulating skill system for AI agents — learn, review, and reuse skills across sessions"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "coldbean-s" }]
keywords = ["ai", "agent", "skills", "learning", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
cli = ["click>=8.0"]
embedding = ["sentence-transformers>=2.0"]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.0",
]
all = ["skill-learner[cli,embedding,dev]"]

[project.scripts]
skill-learner = "skill_learner.cli:main"

[project.urls]
Homepage = "https://github.com/coldbean-s/skill-learner"
Repository = "https://github.com/coldbean-s/skill-learner"

[tool.hatch.build.targets.wheel]
packages = ["src/skill_learner"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
